--- a/CSharp/FizzBuzz/FizzBuzz.csproj
+++ b/CSharp/FizzBuzz/FizzBuzz.csproj
@@ -7,4 +7,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="FizzBuzz.Test" />
+  </ItemGroup>
 </Project>
